--- a/requirements.txt
+++ b/requirements.txt
@@ -8,3 +8,8 @@ langchain==0.0.119
 gpt-index==0.4.35.post1
 fastapi_sqlalchemy==0.2.1
 scipy==1.9.3
+discord==2.2.2
+pillow==9.4.0
+google-auth==2.17.0
+google-cloud-storage==2.8.0
+git+https://github.com/alex200420/brainbite.git@main#egg=brainbite
